plang/testing/logs/false-incorrect/149/program149.p.p
oFR (TH3WR) (vD (mcZ) g4kw (ncM (G) (ECn4) (s4ABk (u (J)) (ymjk (eNa vyspP l) (Cba2) (hcXY kzsuH (k (BxMQ) (QUcI) (Uk))))) (eg O (zdO nMi))) (cREuE)) (brzj ZtPv zUx) (gs kUSx0).


d cgDn :- ((qHc2 (ntGme (l (y) GOFp6 obs) SpC) Ymy3 (ItUZy) Aj1GF), (aaxN (Z5yzA) (jZFV (depfZ IE2k K1R1 (GMy) (dKYU4 (SG0) M)) kz3g BF (qdM Ur (YQ) (KA)))), (tT9 q9g0N (H) SX), fBPy (YTvo) (qf TKy) Q).


g8 (i) (P) bNtG.


yDwx e EvdLA.
au3s (jKMLW).

pNo73 (QsD) v :- cBO (X) (Oat1).

bpGag.
c :- e0M, pjX2D (GU) (hHmY); y3 (fSw5a); ((vsPKu)), n Gq n (cYJAQ ifn), e, xq0Yr (v V) (B) (bj Xo4Cm coIX) f, hQe9 (Q) GOK DceV (I); oFJwC qXObk C zD77 (tg (QYwX6) (mJ3r Ha3v (F29)) (Rx)); wYQu (dA JBY) zv, yBP46 ZvtAh QDRNh, h (LW39) sP (aC6wl (GyV) (me s) (z7 (Y) l)) n.

e (oCKU (CHD) qQy) :- (m5 H (f3w (c) d)).
lk A3 (cWev (eLfTI (PaG) vZ4Z (ZKwCY) RF)) :- (((n izvzs (Z); eF (N) (A) (eBhUj (M) (V)) (Yb9))); (fhZEn yATms J (noSR remz) LKD1I; i Zo h H, p (j wdq (c gGJo (z6HM (V0tum) WHr q82M) (z9g (qS5 Di (H) dEUw) (imn (ABfi) (i (hF (m8m (UySP)) Ds (G) (EK)) sG) IHT4C)) (RMgt)) (q lbe)) (cD1) (iu (i1) (WG)); b5 eua (IJbYq) xjQ (wUok))).
n3cp q.


g3 (DiK6) (H2).
oGT9 XfKcY RYSoo (lB (F2Nos)) :- ((w, j sYi), (i (kFb0Y (a0ikG n Rqc)) b (S) (o iZp1 ZJ (h60fC (YBw4c) (x8bN (O4R) s (ea)) d2YsK P0))); v); ((phm ax; tVaB Sagd4 q), os mKeq1 (V0J4); vZYV (o (lbLD (b (qT w (IcR) cyh (Uu))))) (v3) (DmG); d (CVs), oYCu).
ry r dzN.


? c F vBab (zi xn) (wkv).


